--- a/.env
+++ b/.env
@@ -3,4 +3,4 @@ CLOUDINARY_CLOUD_NAME="isabellelamarre"
 CLOUDINARY_API_KEY="314114844461826"
 CLOUDINARY_API_SECRET="1VVwsRZ5VWZhhfSVdg4HcAYuTjQ"
 
-PUBLIC_GA_ID=""
+PUBLIC_GA_ID="G-N8NL16BB3M"
