--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
     "preview": "astro preview"
   },
   "keywords": [],
-  "author": "",
+  "author": "Isabelle Lamarre",
   "license": "ISC",
   "dependencies": {
-    "astro": "^5.15.8"
+    "animate.css": "^4.1.1",
+    "astro": "^5.15.8",
+    "wow.js": "^1.2.2",
+    "wowjs": "^1.1.3"
   },
   "devDependencies": {
     "@astrojs/sitemap": "^3.6.0",
