--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "animate.css": "^4.1.1",
+    "aos": "^3.0.0-beta.6",
     "astro": "^5.15.8",
     "wow.js": "^1.2.2",
     "wowjs": "^1.1.3"
