section certification+ technos

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 
-CLOUDINARY_CLOUD_NAME="isabellelamarre"
-CLOUDINARY_API_KEY="314114844461826"
+PUBLIC_CLOUDINARY_CLOUD_NAME="isabellelamarre"
+PUBLIC_CLOUDINARY_API_KEY="314114844461826"
 CLOUDINARY_API_SECRET="1VVwsRZ5VWZhhfSVdg4HcAYuTjQ"
 
 PUBLIC_GA_ID="G-N8NL16BB3M"
