--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "animate.css": "^4.1.1",
     "aos": "^3.0.0-beta.6",
     "astro": "^5.15.8",
+    "astro-cloudinary": "^1.3.5",
     "wow.js": "^1.2.2",
     "wowjs": "^1.1.3"
   },
