section realisation, composant PojectCard, pagination et slug projet

--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -1,11 +1,11 @@
 [
   {
     "id": "908a2cc7-3047-4236-80ec-257a2805f3d9",
-    "slug": "karine-lamarre",
+    "slug": "karine-lamarre-1",
     "title": "Karine LAMARRE 1",
     "description": "blalbla vbf,e,r",
     "project_url": "https://karinelamarretherapies.fr",
-    "github_url": "",
+    "github_url": "https://github.com/zazaLaLicorne/karine",
     "badge": "independent",
     "priority": "high",
     "images": [
@@ -52,7 +52,7 @@
   },
   {
     "id": "908a2cc7-3047-4236-80ec-257a2805f3d9",
-    "slug": "karine-lamarre",
+    "slug": "karine-lamarre-2",
     "title": "Karine LAMARRE 2",
     "description": "blalbla vbf,e,r",
     "project_url": "https://karinelamarretherapies.fr",
@@ -103,7 +103,7 @@
   },
   {
     "id": "908a2cc7-3047-4236-80ec-257a2805f3d9",
-    "slug": "karine-lamarre",
+    "slug": "karine-lamarre-3",
     "title": "Karine LAMARRE 3",
     "description": "blalbla vbf,e,r",
     "project_url": "https://karinelamarretherapies.fr",
@@ -154,7 +154,7 @@
   },
   {
     "id": "908a2cc7-3047-4236-80ec-257a2805f3d9",
-    "slug": "karine-lamarre",
+    "slug": "karine-lamarre-4",
     "title": "Karine LAMARRE 4",
     "description": "blalbla vbf,e,r",
     "project_url": "https://karinelamarretherapies.fr",
@@ -205,7 +205,7 @@
   },
   {
     "id": "908a2cc7-3047-4236-80ec-257a2805f3d9",
-    "slug": "karine-lamarre",
+    "slug": "karine-lamarre-5",
     "title": "Karine LAMARRE 5",
     "description": "blalbla vbf,e,r",
     "project_url": "https://karinelamarretherapies.fr",
@@ -256,7 +256,7 @@
   },
    {
     "id": "908a2cc7-3047-4236-80ec-257a2805f3d9",
-    "slug": "karine-lamarre",
+    "slug": "karine-lamarre-6",
     "title": "Karine LAMARRE 6",
     "description": "blalbla vbf,e,r",
     "project_url": "https://karinelamarretherapies.fr",
@@ -307,7 +307,7 @@
   },
    {
     "id": "908a2cc7-3047-4236-80ec-257a2805f3d9",
-    "slug": "karine-lamarre",
+    "slug": "karine-lamarre-7",
     "title": "Karine LAMARRE 7",
     "description": "blalbla vbf,e,r",
     "project_url": "https://karinelamarretherapies.fr",
