--- a/vercel.json
+++ b/vercel.json
@@ -3,10 +3,12 @@
     {
       "source": "/(.*)",
       "headers": [
-        { "key": "Content-Security-Policy", "value": "default-src 'self'; img-src 'self' data: https://res.cloudinary.com; script-src 'self' 'unsafe-inline' https://www.googletagmanager.com https://assets.calendly.com; style-src 'self' 'unsafe-inline' https://assets.calendly.com; font-src 'self' data:; connect-src 'self' https://api.calendly.com https://res.cloudinary.com; frame-src https://calendly.com; object-src 'none'; base-uri 'self'; form-action 'self'; frame-ancestors 'none';" },
+        {
+          "key": "Content-Security-Policy",
+          "value": "default-src 'self'; img-src 'self' data: https://res.cloudinary.com https://i.ytimg.com; script-src 'self' 'unsafe-inline' https://www.googletagmanager.com https://assets.calendly.com https://www.youtube.com; style-src 'self' 'unsafe-inline' https://assets.calendly.com; font-src 'self' data:; connect-src 'self' https://api.calendly.com https://res.cloudinary.com https://www.youtube.com; frame-src 'self' https://calendly.com https://www.youtube.com https://www.youtube-nocookie.com; object-src 'none'; base-uri 'self'; form-action 'self'; frame-ancestors 'self';"
+        },
         { "key": "Referrer-Policy", "value": "strict-origin-when-cross-origin" },
         { "key": "X-Content-Type-Options", "value": "nosniff" },
-        { "key": "X-Frame-Options", "value": "DENY" },
         { "key": "X-XSS-Protection", "value": "1; mode=block" },
         { "key": "Permissions-Policy", "value": "geolocation=(), camera=(), microphone=(), payment=()" },
         { "key": "Strict-Transport-Security", "value": "max-age=63072000; includeSubDomains; preload" }
