--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "aos": "^3.0.0-beta.6",
     "astro": "^5.15.8",
     "astro-cloudinary": "^1.3.5",
+    "astro-purgecss": "^5.3.0",
+    "purgecss": "^7.0.2",
     "wow.js": "^1.2.2",
     "wowjs": "^1.1.3"
   },
@@ -26,6 +28,7 @@
     "@astrojs/tailwind": "^6.0.2",
     "astro-compress": "^2.3.8",
     "autoprefixer": "^10.4.21",
+    "baseline-browser-mapping": "^2.9.11",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.18"
   }
