--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "portfolio",
   "version": "1.0.0",
   "type": "module",
-  "description": "",
-  "main": "index.js",
+  "description": "Portfolio statique moderne basé sur Astro, Tailwind et composants réutilisables, pensé pour performance, évolutivité et SEO.",
+  
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "astro dev",
@@ -17,11 +17,7 @@
     "animate.css": "^4.1.1",
     "aos": "^3.0.0-beta.6",
     "astro": "^5.15.8",
-    "astro-cloudinary": "^1.3.5",
-    "astro-purgecss": "^5.3.0",
-    "purgecss": "^7.0.2",
-    "wow.js": "^1.2.2",
-    "wowjs": "^1.1.3"
+    "astro-cloudinary": "^1.3.5"
   },
   "devDependencies": {
     "@astrojs/sitemap": "^3.6.0",
